manifests_k8s/microservices.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: session-service
  name: session-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: session-service
  template:
    metadata:
      labels:
        run: session-service
    spec: 
      containers:
      - image: dorothag/session-service:arm 
        name: session-service
        ports:
        - containerPort: 8081
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: hotel-service
  name: hotel-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: hotel-service
  template:
    metadata:
      labels:
        run: hotel-service
    spec: 
      containers:
      - image: dorothag/hotel-service:arm 
        name: hotel-service
        ports:
        - containerPort: 8082
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: payment-service
  name: payment-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: payment-service
  template:
    metadata:
      labels:
        run: payment-service
    spec: 
      containers:
      - image: dorothag/payment-service:arm 
        name: payment-service
        ports:
        - containerPort: 8084
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: loyalty-service
  name: loyalty-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: loyalty-service
  template:
    metadata:
      labels:
        run: loyalty-service
    spec: 
      containers:
      - image: dorothag/loyalty-service:arm 
        name: loyalty-service
        ports:
        - containerPort: 8085
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: report-service
  name: report-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: report-service
  template:
    metadata:
      labels:
        run: report-service
    spec: 
      containers:
      - image: dorothag/report-service:arm 
        name: report-service
        ports:
        - containerPort: 8086
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: booking-service
  name: booking-service
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: booking-service
  template:
    metadata:
      labels:
        run: booking-service
    spec: 
      containers:
      - image: dorothag/booking-service:arm 
        name: booking-service
        ports:
        - containerPort: 8083
---

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: gateway-service
  name: gateway-service
spec: 
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: gateway-service
  template:
    metadata:
      labels:
        run: gateway-service
    spec: 
      containers:
      - image: dorothag/gateway-service:arm 
        name: gateway-service
        ports:
        - containerPort: 8087
---
# SERVICES

apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  selector:
    run: session-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    run: hotel-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

---

apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    run: booking-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083

---

apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    run: payment-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084

---

apiVersion: v1
kind: Service
metadata:
  name: loyalty-service
spec:
  selector:
    run: loyalty-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085

---

apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  selector:
    run: report-service
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086

---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    run: gateway-service
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
