manifests_k8s/postgres.yml

apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: postgres
  name: postgres
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: postgres
  template:
    metadata:
      labels:
        run: postgres
    spec: 
      containers:
      - image: dorothag/database:arm 
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    run: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
