manifests_k8s/rabbitmq.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    run: rabbitmq
  name: rabbitmq
spec: 
  replicas: 1
  selector:
    matchLabels:
      run: rabbitmq
  template:
    metadata:
      labels:
        run: rabbitmq
    spec: 
      containers:
      - image: rabbitmq:3-management-alpine
        name: rabbitmq
        ports:
        - containerPort: 5672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    run: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
