manifests_k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app.dorothag.local
      secretName: dorothag-tls

  rules:
    - host: app.dorothag.local
      http:
        paths:
          - path: /api/v1/auth  # Перенаправление на session-service
            pathType: Prefix
            backend:
              service:
                name: session-service
                port:
                  number: 8081

          - path: /    # Перенаправление всего остального на gateway-service
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8087
